Migrate deprecated newInstance()
Class.newInstance() is deprecated since Java 9, remove its use.

Change-Id: Iae15923310b8001ed1b58e22a28dd5c36f3a00d8
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>